<resources>
    <string name="app_name">Twitty</string>

    <string name="navigation_item_notification">Notification</string>
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_drafts">Drafts</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="error_loading_data">An error has occurred!</string>
    <string name="error_refreshing_data">An error has occurred. Click here to retry</string>

    <string name="menu_item_search">Search</string>
    <string name="menu_item_reply">Reply</string>
    <string name="menu_item_retweet">Retweet</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_logout">Logout</string>

    <string name="action_add_photo">Add photo</string>
    <string name="action_post_tweet">Post tweet</string>
    <string name="action_add_picture">Add picture</string>
    <string name="action_authentication">Authentication</string>

    <string name="screen_name">\@%s</string>
    <string name="hint_tweet">What\'s happening?</string>
    <string name="hint_avatar">Profile image</string>
    <string name="notification_tweet_saved">Tweet has been saved in Drafts</string>
    <string name="drafts">Drafts</string>
    <string name="login">Login</string>
    <string name="reply">Reply</string>
    <string name="favorite">Favorite</string>
    <string name="retweet">Retweet</string>
</resources>
