<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >

    <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/tweet_cardview_elevation"
            app:cardUseCompatPadding="true"
            >

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/tweet_cardview_padding"
                android:background="@color/tweet_cardview_background"
                >

            <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/tweet_avatar_width"
                    android:layout_height="@dimen/tweet_avatar_height"
                    android:scaleType="centerCrop"
                    android:layout_marginRight="@dimen/tweet_avatar_margin_right"
                    android:contentDescription="@string/hint_avatar"
                    tools:src="@mipmap/ic_account"
                    />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                    <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/tweet_user_name_margin_right"
                            android:textStyle="bold"
                            android:textSize="@dimen/tweet_user_name_text_size"
                            tools:text="Test App"
                            />

                    <TextView
                            android:id="@+id/date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/text_color_secondary"
                            tools:text="5m"
                            />

                </LinearLayout>

                <TextView
                        android:id="@+id/screenName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/tweet_screen_name_margin_bottom"
                        android:textColor="@color/text_color_secondary"
                        tools:text="\@TestApp"
                        />

                <TextView
                        android:id="@+id/tweetMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_primary"
                        tools:text="These are attributes which are used when the layout is rendered in the tool, but have no impact on the runtime."
                        />

                <ImageView
                        android:id="@+id/mediaImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart"
                        tools:src="@mipmap/ic_twitter"
                        />

                    <LinearLayout
                            android:id="@+id/tweetActions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            >

                            <LinearLayout
                                    android:id="@+id/reply"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/TweetActionContainer"
                                    >

                                    <com.twitty.view.ToggleImageButton
                                            android:id="@+id/replyIcon"
                                            android:src="@drawable/btn_reply"
                                            android:contentDescription="@string/reply"
                                            style="@style/TweetAction"
                                            />

                                    <TextView
                                            android:id="@+id/replyCount"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            style="@style/TweetCountTextView"
                                            tools:text="123"
                                            />

                            </LinearLayout>

                            <LinearLayout
                                    android:id="@+id/retweet"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/TweetActionContainer"
                                    >

                                    <com.twitty.view.ToggleImageButton
                                            android:id="@+id/retweetIcon"
                                            android:src="@drawable/btn_retweet"
                                            android:contentDescription="@string/retweet"
                                            style="@style/TweetAction"
                                            />

                                    <TextView
                                            android:id="@+id/retweetCount"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            style="@style/TweetCountTextView"
                                            tools:text="123"
                                            />

                            </LinearLayout>

                            <LinearLayout
                                    android:id="@+id/favorite"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/TweetActionContainer"
                                    >

                                    <com.twitty.view.ToggleImageButton
                                            android:id="@+id/favoriteIcon"
                                            android:src="@drawable/btn_favorite"
                                            android:contentDescription="@string/favorite"
                                            style="@style/TweetAction"
                                            />

                                    <TextView
                                            android:id="@+id/favoriteCount"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            style="@style/TweetCountTextView"
                                            tools:text="123"
                                            />
                            </LinearLayout>

                            <android.support.v7.widget.Toolbar
                                    android:id="@+id/tweetToolbar"
                                    android:layout_width="0dp"
                                    android:layout_height="?attr/actionBarSize"
                                    android:layout_weight="1"
                                    android:layout_gravity="end"
                                    />

                    </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>